--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 * {
-  padding: 0%;
-  margin: 0%;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
+  /* font-family: "Josefin Sans", sans-serif; */
+  font-family: 'Arimo', sans-serif;
 }
 
 .actives.active {
